--- a/ble/getting-started.html
+++ b/ble/getting-started.html
@@ -84,9 +84,6 @@
                                                             <a href="/setup/startup">Startup</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/boilerplate">Boilerplate</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -249,6 +246,9 @@
                                                             <a href="/other/nfc">NFC</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/other/power">Power Management</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -330,18 +330,18 @@
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v201">v2.0-preview (May 10, 2021)</a>
+                                                            <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Bluetooth LE is divided into 2 separate categories - the central manager (client) and the peripheral manager (server).</p>
 <div class="tab-wrap">
-<input type="radio" id="93ab8ad540f2484d97a06b58334f524a-f91f71837f66475c85547d14d1a66825" name="93ab8ad540f2484d97a06b58334f524a" class="tab" checked=""><label for="93ab8ad540f2484d97a06b58334f524a-f91f71837f66475c85547d14d1a66825">General</label>
-<input type="radio" id="93ab8ad540f2484d97a06b58334f524a-96ce861f264b457ba169cc27e28a1de4" name="93ab8ad540f2484d97a06b58334f524a" class="tab"><label for="93ab8ad540f2484d97a06b58334f524a-96ce861f264b457ba169cc27e28a1de4">Startup</label>
-<input type="radio" id="93ab8ad540f2484d97a06b58334f524a-c931c756f0494df18a908ed776afe415" name="93ab8ad540f2484d97a06b58334f524a" class="tab"><label for="93ab8ad540f2484d97a06b58334f524a-c931c756f0494df18a908ed776afe415">Android</label>
-<input type="radio" id="93ab8ad540f2484d97a06b58334f524a-2ff318adb32847f7858d7b12f71d4956" name="93ab8ad540f2484d97a06b58334f524a" class="tab"><label for="93ab8ad540f2484d97a06b58334f524a-2ff318adb32847f7858d7b12f71d4956">iOS</label>
-<input type="radio" id="93ab8ad540f2484d97a06b58334f524a-7bd706b09ae64388aabb6324a3d2f2f0" name="93ab8ad540f2484d97a06b58334f524a" class="tab"><label for="93ab8ad540f2484d97a06b58334f524a-7bd706b09ae64388aabb6324a3d2f2f0">Windows</label>
+<input type="radio" id="42084f7aaba34297b7350a6194d24eb5-79374b95d71a4fe4885458f554b8bb1b" name="42084f7aaba34297b7350a6194d24eb5" class="tab" checked=""><label for="42084f7aaba34297b7350a6194d24eb5-79374b95d71a4fe4885458f554b8bb1b">General</label>
+<input type="radio" id="42084f7aaba34297b7350a6194d24eb5-ca5a2a07aceb46f78a3c29c3ce8b372f" name="42084f7aaba34297b7350a6194d24eb5" class="tab"><label for="42084f7aaba34297b7350a6194d24eb5-ca5a2a07aceb46f78a3c29c3ce8b372f">Startup</label>
+<input type="radio" id="42084f7aaba34297b7350a6194d24eb5-63d87e4de7904637b892ca92a872919e" name="42084f7aaba34297b7350a6194d24eb5" class="tab"><label for="42084f7aaba34297b7350a6194d24eb5-63d87e4de7904637b892ca92a872919e">Android</label>
+<input type="radio" id="42084f7aaba34297b7350a6194d24eb5-22313e4b479d4e9c957743c1cc406ff3" name="42084f7aaba34297b7350a6194d24eb5" class="tab"><label for="42084f7aaba34297b7350a6194d24eb5-22313e4b479d4e9c957743c1cc406ff3">iOS</label>
+<input type="radio" id="42084f7aaba34297b7350a6194d24eb5-79ba6c859f544e56adcfbabbc8d27bf6" name="42084f7aaba34297b7350a6194d24eb5" class="tab"><label for="42084f7aaba34297b7350a6194d24eb5-79ba6c859f544e56adcfbabbc8d27bf6">Windows</label>
 <div class="tab__content">
 
 <p>|Area|Info|
@@ -440,7 +440,7 @@ services.UseBleClient();
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/ble/getting-started.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/ble/getting-started.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
