--- a/httptransfers/getting-started.html
+++ b/httptransfers/getting-started.html
@@ -84,9 +84,6 @@
                                                             <a href="/setup/startup">Startup</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/boilerplate">Boilerplate</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -249,6 +246,9 @@
                                                             <a href="/other/nfc">NFC</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/other/power">Power Management</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -330,7 +330,7 @@
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v201">v2.0-preview (May 10, 2021)</a>
+                                                            <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -351,11 +351,11 @@
 </li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="044f142489524b83a2601fd91df1d5b0-38d5041d2afd4e00a145bd116d0a73fe" name="044f142489524b83a2601fd91df1d5b0" class="tab" checked=""><label for="044f142489524b83a2601fd91df1d5b0-38d5041d2afd4e00a145bd116d0a73fe">General</label>
-<input type="radio" id="044f142489524b83a2601fd91df1d5b0-0e512dd7baff4197b12eb21161d30443" name="044f142489524b83a2601fd91df1d5b0" class="tab"><label for="044f142489524b83a2601fd91df1d5b0-0e512dd7baff4197b12eb21161d30443">Startup</label>
-<input type="radio" id="044f142489524b83a2601fd91df1d5b0-a85dc84f2fdc47f5bb0f5a7b447ae5da" name="044f142489524b83a2601fd91df1d5b0" class="tab"><label for="044f142489524b83a2601fd91df1d5b0-a85dc84f2fdc47f5bb0f5a7b447ae5da">Android</label>
-<input type="radio" id="044f142489524b83a2601fd91df1d5b0-fde5d61c0f814dd280044dbbd6893afb" name="044f142489524b83a2601fd91df1d5b0" class="tab"><label for="044f142489524b83a2601fd91df1d5b0-fde5d61c0f814dd280044dbbd6893afb">iOS</label>
-<input type="radio" id="044f142489524b83a2601fd91df1d5b0-d3c8300a78f64ec6b7cc2f5e34ef27f3" name="044f142489524b83a2601fd91df1d5b0" class="tab"><label for="044f142489524b83a2601fd91df1d5b0-d3c8300a78f64ec6b7cc2f5e34ef27f3">Windows</label>
+<input type="radio" id="5b9e822bfd004110b04e64137be23233-39801f8c88724e6eb70dacc5f4c7762b" name="5b9e822bfd004110b04e64137be23233" class="tab" checked=""><label for="5b9e822bfd004110b04e64137be23233-39801f8c88724e6eb70dacc5f4c7762b">General</label>
+<input type="radio" id="5b9e822bfd004110b04e64137be23233-278e55800d1e42389675d606f0854f61" name="5b9e822bfd004110b04e64137be23233" class="tab"><label for="5b9e822bfd004110b04e64137be23233-278e55800d1e42389675d606f0854f61">Startup</label>
+<input type="radio" id="5b9e822bfd004110b04e64137be23233-be75b4c0169a490d90a75b5cd7237b06" name="5b9e822bfd004110b04e64137be23233" class="tab"><label for="5b9e822bfd004110b04e64137be23233-be75b4c0169a490d90a75b5cd7237b06">Android</label>
+<input type="radio" id="5b9e822bfd004110b04e64137be23233-b6e74aa72159466a838db4d122a630ba" name="5b9e822bfd004110b04e64137be23233" class="tab"><label for="5b9e822bfd004110b04e64137be23233-b6e74aa72159466a838db4d122a630ba">iOS</label>
+<input type="radio" id="5b9e822bfd004110b04e64137be23233-b6bae70b876c40468214b8345812bb93" name="5b9e822bfd004110b04e64137be23233" class="tab"><label for="5b9e822bfd004110b04e64137be23233-b6bae70b876c40468214b8345812bb93">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -468,7 +468,7 @@ services.UseHttpTransfers&lt;YourNamespace.MyHttpTransferDelegate&gt;();
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/httptransfers/getting-started.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/httptransfers/getting-started.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
