--- a/locations/geofences.html
+++ b/locations/geofences.html
@@ -86,9 +86,6 @@
                                                             <a href="/setup/startup">Startup</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/boilerplate">Boilerplate</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -251,6 +248,9 @@
                                                             <a href="/other/nfc">NFC</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/other/power">Power Management</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -332,17 +332,17 @@
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v201">v2.0-preview (May 10, 2021)</a>
+                                                            <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="57a3c88fabb84ca0875057f4c11adf8b-4fcbb7fbb15148c3be234296b1d12328" name="57a3c88fabb84ca0875057f4c11adf8b" class="tab" checked><label for="57a3c88fabb84ca0875057f4c11adf8b-4fcbb7fbb15148c3be234296b1d12328" >General</label>
-<input type="radio" id="57a3c88fabb84ca0875057f4c11adf8b-eb2f955424a44ca7b5a4a9dc0039942f" name="57a3c88fabb84ca0875057f4c11adf8b" class="tab" ><label for="57a3c88fabb84ca0875057f4c11adf8b-eb2f955424a44ca7b5a4a9dc0039942f" >Startup</label>
-<input type="radio" id="57a3c88fabb84ca0875057f4c11adf8b-2d63ed12166a4fcdbd12a22bf45fb5a3" name="57a3c88fabb84ca0875057f4c11adf8b" class="tab" ><label for="57a3c88fabb84ca0875057f4c11adf8b-2d63ed12166a4fcdbd12a22bf45fb5a3" >Android</label>
-<input type="radio" id="57a3c88fabb84ca0875057f4c11adf8b-5592a352165045a5a579273d1cbf82d6" name="57a3c88fabb84ca0875057f4c11adf8b" class="tab" ><label for="57a3c88fabb84ca0875057f4c11adf8b-5592a352165045a5a579273d1cbf82d6" >iOS</label>
-<input type="radio" id="57a3c88fabb84ca0875057f4c11adf8b-256844025a43482e871b5ebb1104703c" name="57a3c88fabb84ca0875057f4c11adf8b" class="tab" ><label for="57a3c88fabb84ca0875057f4c11adf8b-256844025a43482e871b5ebb1104703c" >Windows</label>
+<input type="radio" id="3f40914880a04be5925b9bfa5051d479-4c80bac41985487b8106a1817ac1254f" name="3f40914880a04be5925b9bfa5051d479" class="tab" checked><label for="3f40914880a04be5925b9bfa5051d479-4c80bac41985487b8106a1817ac1254f" >General</label>
+<input type="radio" id="3f40914880a04be5925b9bfa5051d479-8530217c41044c128f5b75aa4f3e6d20" name="3f40914880a04be5925b9bfa5051d479" class="tab" ><label for="3f40914880a04be5925b9bfa5051d479-8530217c41044c128f5b75aa4f3e6d20" >Startup</label>
+<input type="radio" id="3f40914880a04be5925b9bfa5051d479-dde6d1fa384a4afc8755f5c8b563cae5" name="3f40914880a04be5925b9bfa5051d479" class="tab" ><label for="3f40914880a04be5925b9bfa5051d479-dde6d1fa384a4afc8755f5c8b563cae5" >Android</label>
+<input type="radio" id="3f40914880a04be5925b9bfa5051d479-f94ab4b6109a4900bcca901ef4b203d0" name="3f40914880a04be5925b9bfa5051d479" class="tab" ><label for="3f40914880a04be5925b9bfa5051d479-f94ab4b6109a4900bcca901ef4b203d0" >iOS</label>
+<input type="radio" id="3f40914880a04be5925b9bfa5051d479-9e7e29e144ec42829bde5577453c8277" name="3f40914880a04be5925b9bfa5051d479" class="tab" ><label for="3f40914880a04be5925b9bfa5051d479-9e7e29e144ec42829bde5577453c8277" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -613,7 +613,7 @@ public class GeofenceUsage
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/locations/geofences.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/locations/geofences.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
