--- a/locations/motionactivity.html
+++ b/locations/motionactivity.html
@@ -86,9 +86,6 @@
                                                             <a href="/setup/startup">Startup</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/boilerplate">Boilerplate</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -251,6 +248,9 @@
                                                             <a href="/other/nfc">NFC</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/other/power">Power Management</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -332,7 +332,7 @@
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v201">v2.0-preview (May 10, 2021)</a>
+                                                            <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -347,10 +347,10 @@
 <li>Cycling</li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="734115a0bd234cb9b2988e59970c951a-d3360e5124f34a6bb4a48cf4f54c9261" name="734115a0bd234cb9b2988e59970c951a" class="tab" checked><label for="734115a0bd234cb9b2988e59970c951a-d3360e5124f34a6bb4a48cf4f54c9261" >General</label>
-<input type="radio" id="734115a0bd234cb9b2988e59970c951a-8f9923016d2b4492bdfdf647e6c6c64c" name="734115a0bd234cb9b2988e59970c951a" class="tab" ><label for="734115a0bd234cb9b2988e59970c951a-8f9923016d2b4492bdfdf647e6c6c64c" >Startup</label>
-<input type="radio" id="734115a0bd234cb9b2988e59970c951a-4d9e287b9ab7456ca26f0a7ee0039d15" name="734115a0bd234cb9b2988e59970c951a" class="tab" ><label for="734115a0bd234cb9b2988e59970c951a-4d9e287b9ab7456ca26f0a7ee0039d15" >Android</label>
-<input type="radio" id="734115a0bd234cb9b2988e59970c951a-2d506cd0110b4723b2e23e02cdae369a" name="734115a0bd234cb9b2988e59970c951a" class="tab" ><label for="734115a0bd234cb9b2988e59970c951a-2d506cd0110b4723b2e23e02cdae369a" >iOS</label>
+<input type="radio" id="8185f40077384702b588ea85b54915ea-757e8ff640da49a89f3b58e9c2c3031d" name="8185f40077384702b588ea85b54915ea" class="tab" checked><label for="8185f40077384702b588ea85b54915ea-757e8ff640da49a89f3b58e9c2c3031d" >General</label>
+<input type="radio" id="8185f40077384702b588ea85b54915ea-fe37e07ae0c64f93b438eb90b3f11a38" name="8185f40077384702b588ea85b54915ea" class="tab" ><label for="8185f40077384702b588ea85b54915ea-fe37e07ae0c64f93b438eb90b3f11a38" >Startup</label>
+<input type="radio" id="8185f40077384702b588ea85b54915ea-159b95c759814e619c23e9b88feecb36" name="8185f40077384702b588ea85b54915ea" class="tab" ><label for="8185f40077384702b588ea85b54915ea-159b95c759814e619c23e9b88feecb36" >Android</label>
+<input type="radio" id="8185f40077384702b588ea85b54915ea-e5b8835da7f149e9938a7719050c7df9" name="8185f40077384702b588ea85b54915ea" class="tab" ><label for="8185f40077384702b588ea85b54915ea-e5b8835da7f149e9938a7719050c7df9" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -450,7 +450,7 @@ foreach (var record in data) {
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/locations/motionactivity.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/locations/motionactivity.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
