--- a/push/azure.html
+++ b/push/azure.html
@@ -86,9 +86,6 @@
                                                             <a href="/setup/startup">Startup</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/boilerplate">Boilerplate</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -251,6 +248,9 @@
                                                             <a href="/other/nfc">NFC</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/other/power">Power Management</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -332,17 +332,17 @@
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v201">v2.0-preview (May 10, 2021)</a>
+                                                            <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="59a944f0b15d4523a37f20d6ed9d70bd-81d58cd3a22e4f259dbe3b4465a105c6" name="59a944f0b15d4523a37f20d6ed9d70bd" class="tab" checked><label for="59a944f0b15d4523a37f20d6ed9d70bd-81d58cd3a22e4f259dbe3b4465a105c6" >General</label>
-<input type="radio" id="59a944f0b15d4523a37f20d6ed9d70bd-1cbceaf6e8b74292945244786bbb0a9f" name="59a944f0b15d4523a37f20d6ed9d70bd" class="tab" ><label for="59a944f0b15d4523a37f20d6ed9d70bd-1cbceaf6e8b74292945244786bbb0a9f" >Startup</label>
-<input type="radio" id="59a944f0b15d4523a37f20d6ed9d70bd-c1cac36d6e104cd697bd7dae94e158a0" name="59a944f0b15d4523a37f20d6ed9d70bd" class="tab" ><label for="59a944f0b15d4523a37f20d6ed9d70bd-c1cac36d6e104cd697bd7dae94e158a0" >Android</label>
-<input type="radio" id="59a944f0b15d4523a37f20d6ed9d70bd-54f732d54ae24d5ca622d9a609695390" name="59a944f0b15d4523a37f20d6ed9d70bd" class="tab" ><label for="59a944f0b15d4523a37f20d6ed9d70bd-54f732d54ae24d5ca622d9a609695390" >iOS</label>
-<input type="radio" id="59a944f0b15d4523a37f20d6ed9d70bd-9f17b77559bd47eaa75816052e05915f" name="59a944f0b15d4523a37f20d6ed9d70bd" class="tab" ><label for="59a944f0b15d4523a37f20d6ed9d70bd-9f17b77559bd47eaa75816052e05915f" >Windows</label>
+<input type="radio" id="79eb3011501a4440900736f9e32af3a3-203172eca27b44a8bf028d111fdd0b1c" name="79eb3011501a4440900736f9e32af3a3" class="tab" checked><label for="79eb3011501a4440900736f9e32af3a3-203172eca27b44a8bf028d111fdd0b1c" >General</label>
+<input type="radio" id="79eb3011501a4440900736f9e32af3a3-95b53a102eca4c269be8af4d22b27794" name="79eb3011501a4440900736f9e32af3a3" class="tab" ><label for="79eb3011501a4440900736f9e32af3a3-95b53a102eca4c269be8af4d22b27794" >Startup</label>
+<input type="radio" id="79eb3011501a4440900736f9e32af3a3-ce039b786a2d4a228cd49f82ee98f399" name="79eb3011501a4440900736f9e32af3a3" class="tab" ><label for="79eb3011501a4440900736f9e32af3a3-ce039b786a2d4a228cd49f82ee98f399" >Android</label>
+<input type="radio" id="79eb3011501a4440900736f9e32af3a3-1eae50603c84421e8b5ca43ec8119d68" name="79eb3011501a4440900736f9e32af3a3" class="tab" ><label for="79eb3011501a4440900736f9e32af3a3-1eae50603c84421e8b5ca43ec8119d68" >iOS</label>
+<input type="radio" id="79eb3011501a4440900736f9e32af3a3-2960334c316243c1baf9644643a1bc09" name="79eb3011501a4440900736f9e32af3a3" class="tab" ><label for="79eb3011501a4440900736f9e32af3a3-2960334c316243c1baf9644643a1bc09" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -435,7 +435,7 @@ public override void DidReceiveRemoteNotification(UIApplication application, NSD
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/push/azure.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/push/azure.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
