--- a/sensors/accelerometer.html
+++ b/sensors/accelerometer.html
@@ -86,9 +86,6 @@
                                                             <a href="/setup/startup">Startup</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/boilerplate">Boilerplate</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -251,6 +248,9 @@
                                                             <a href="/other/nfc">NFC</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/other/power">Power Management</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -332,17 +332,17 @@
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v201">v2.0-preview (May 10, 2021)</a>
+                                                            <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="e4f0e4460e5241c0903b6046a1cce2e3-3c45ac2076564dc38edddc3d6861067a" name="e4f0e4460e5241c0903b6046a1cce2e3" class="tab" checked><label for="e4f0e4460e5241c0903b6046a1cce2e3-3c45ac2076564dc38edddc3d6861067a" >General</label>
-<input type="radio" id="e4f0e4460e5241c0903b6046a1cce2e3-356ba12234964cedaff072a654ca4cb2" name="e4f0e4460e5241c0903b6046a1cce2e3" class="tab" ><label for="e4f0e4460e5241c0903b6046a1cce2e3-356ba12234964cedaff072a654ca4cb2" >Startup</label>
-<input type="radio" id="e4f0e4460e5241c0903b6046a1cce2e3-4e32d33ca3ce4a24a753b5084a8c06d3" name="e4f0e4460e5241c0903b6046a1cce2e3" class="tab" ><label for="e4f0e4460e5241c0903b6046a1cce2e3-4e32d33ca3ce4a24a753b5084a8c06d3" >Android</label>
-<input type="radio" id="e4f0e4460e5241c0903b6046a1cce2e3-d1484e839508489c816547908672ed05" name="e4f0e4460e5241c0903b6046a1cce2e3" class="tab" ><label for="e4f0e4460e5241c0903b6046a1cce2e3-d1484e839508489c816547908672ed05" >iOS</label>
-<input type="radio" id="e4f0e4460e5241c0903b6046a1cce2e3-b46e498e7503480eb6ddb79b7a4024dc" name="e4f0e4460e5241c0903b6046a1cce2e3" class="tab" ><label for="e4f0e4460e5241c0903b6046a1cce2e3-b46e498e7503480eb6ddb79b7a4024dc" >Windows</label>
+<input type="radio" id="75c45fe72bca4b6faae1f1c887fb59d9-e0332b903cfa4527b22bf4e3a2be2b07" name="75c45fe72bca4b6faae1f1c887fb59d9" class="tab" checked><label for="75c45fe72bca4b6faae1f1c887fb59d9-e0332b903cfa4527b22bf4e3a2be2b07" >General</label>
+<input type="radio" id="75c45fe72bca4b6faae1f1c887fb59d9-8e96dd96b51d40b7a3b860d985bd5797" name="75c45fe72bca4b6faae1f1c887fb59d9" class="tab" ><label for="75c45fe72bca4b6faae1f1c887fb59d9-8e96dd96b51d40b7a3b860d985bd5797" >Startup</label>
+<input type="radio" id="75c45fe72bca4b6faae1f1c887fb59d9-90995a1f98bc4fdcb0d111a11833de62" name="75c45fe72bca4b6faae1f1c887fb59d9" class="tab" ><label for="75c45fe72bca4b6faae1f1c887fb59d9-90995a1f98bc4fdcb0d111a11833de62" >Android</label>
+<input type="radio" id="75c45fe72bca4b6faae1f1c887fb59d9-716497f42fdd48e291fc1e5b3da858b2" name="75c45fe72bca4b6faae1f1c887fb59d9" class="tab" ><label for="75c45fe72bca4b6faae1f1c887fb59d9-716497f42fdd48e291fc1e5b3da858b2" >iOS</label>
+<input type="radio" id="75c45fe72bca4b6faae1f1c887fb59d9-9ef2b2e506c64f78b4922501617a942e" name="75c45fe72bca4b6faae1f1c887fb59d9" class="tab" ><label for="75c45fe72bca4b6faae1f1c887fb59d9-9ef2b2e506c64f78b4922501617a942e" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -382,7 +382,7 @@ namespace YourNamespace
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/sensors/accelerometer.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/sensors/accelerometer.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
