--- a/sensors/ambientlight.html
+++ b/sensors/ambientlight.html
@@ -86,9 +86,6 @@
                                                             <a href="/setup/startup">Startup</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/boilerplate">Boilerplate</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -251,6 +248,9 @@
                                                             <a href="/other/nfc">NFC</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/other/power">Power Management</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -332,16 +332,16 @@
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v201">v2.0-preview (May 10, 2021)</a>
+                                                            <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="256b53b4c2e84010b962979ac593fdeb-011bc9b426d64dbaa9d16b8bce402f01" name="256b53b4c2e84010b962979ac593fdeb" class="tab" checked><label for="256b53b4c2e84010b962979ac593fdeb-011bc9b426d64dbaa9d16b8bce402f01" >General</label>
-<input type="radio" id="256b53b4c2e84010b962979ac593fdeb-acbe66e729e9415f8f6331805d2a9928" name="256b53b4c2e84010b962979ac593fdeb" class="tab" ><label for="256b53b4c2e84010b962979ac593fdeb-acbe66e729e9415f8f6331805d2a9928" >Startup</label>
-<input type="radio" id="256b53b4c2e84010b962979ac593fdeb-8f7ed623d69e44bfa1f46df6e3420a68" name="256b53b4c2e84010b962979ac593fdeb" class="tab" ><label for="256b53b4c2e84010b962979ac593fdeb-8f7ed623d69e44bfa1f46df6e3420a68" >Android</label>
-<input type="radio" id="256b53b4c2e84010b962979ac593fdeb-7151f6a6c85e4801a762bba7b79c2803" name="256b53b4c2e84010b962979ac593fdeb" class="tab" ><label for="256b53b4c2e84010b962979ac593fdeb-7151f6a6c85e4801a762bba7b79c2803" >Windows</label>
+<input type="radio" id="46db4af586ac4b7f97143d09e1aff8ec-0884a4132ac646e3ae67c1b2921adbcc" name="46db4af586ac4b7f97143d09e1aff8ec" class="tab" checked><label for="46db4af586ac4b7f97143d09e1aff8ec-0884a4132ac646e3ae67c1b2921adbcc" >General</label>
+<input type="radio" id="46db4af586ac4b7f97143d09e1aff8ec-0b693cec20f74601b211e8f5cfe0b4fc" name="46db4af586ac4b7f97143d09e1aff8ec" class="tab" ><label for="46db4af586ac4b7f97143d09e1aff8ec-0b693cec20f74601b211e8f5cfe0b4fc" >Startup</label>
+<input type="radio" id="46db4af586ac4b7f97143d09e1aff8ec-658d4727868d4beab462703aa7a892ea" name="46db4af586ac4b7f97143d09e1aff8ec" class="tab" ><label for="46db4af586ac4b7f97143d09e1aff8ec-658d4727868d4beab462703aa7a892ea" >Android</label>
+<input type="radio" id="46db4af586ac4b7f97143d09e1aff8ec-9d18c243b48f4e00bd9bcbdedbb3b13c" name="46db4af586ac4b7f97143d09e1aff8ec" class="tab" ><label for="46db4af586ac4b7f97143d09e1aff8ec-9d18c243b48f4e00bd9bcbdedbb3b13c" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -378,7 +378,7 @@ namespace YourNamespace
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/sensors/ambientlight.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/sensors/ambientlight.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
