--- a/sensors/barometer.html
+++ b/sensors/barometer.html
@@ -86,9 +86,6 @@
                                                             <a href="/setup/startup">Startup</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/boilerplate">Boilerplate</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -251,6 +248,9 @@
                                                             <a href="/other/nfc">NFC</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/other/power">Power Management</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -332,17 +332,17 @@
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v201">v2.0-preview (May 10, 2021)</a>
+                                                            <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="9bd81325f5e342fe9b1a5519f3eae341-4db805ea791841c88a1abccd18d2dcea" name="9bd81325f5e342fe9b1a5519f3eae341" class="tab" checked><label for="9bd81325f5e342fe9b1a5519f3eae341-4db805ea791841c88a1abccd18d2dcea" >General</label>
-<input type="radio" id="9bd81325f5e342fe9b1a5519f3eae341-61f6206b57164d96a60414cf065a2368" name="9bd81325f5e342fe9b1a5519f3eae341" class="tab" ><label for="9bd81325f5e342fe9b1a5519f3eae341-61f6206b57164d96a60414cf065a2368" >Startup</label>
-<input type="radio" id="9bd81325f5e342fe9b1a5519f3eae341-3099c064c803459fbbe6924456a3f411" name="9bd81325f5e342fe9b1a5519f3eae341" class="tab" ><label for="9bd81325f5e342fe9b1a5519f3eae341-3099c064c803459fbbe6924456a3f411" >Android</label>
-<input type="radio" id="9bd81325f5e342fe9b1a5519f3eae341-eb1abf739e084d0795a37bc31b63e8e9" name="9bd81325f5e342fe9b1a5519f3eae341" class="tab" ><label for="9bd81325f5e342fe9b1a5519f3eae341-eb1abf739e084d0795a37bc31b63e8e9" >iOS</label>
-<input type="radio" id="9bd81325f5e342fe9b1a5519f3eae341-486f998d068b4e58b68212a203418306" name="9bd81325f5e342fe9b1a5519f3eae341" class="tab" ><label for="9bd81325f5e342fe9b1a5519f3eae341-486f998d068b4e58b68212a203418306" >Windows</label>
+<input type="radio" id="a654804fd54a4cab86e5d87581d8c112-09f02193206946fbb57589d051002430" name="a654804fd54a4cab86e5d87581d8c112" class="tab" checked><label for="a654804fd54a4cab86e5d87581d8c112-09f02193206946fbb57589d051002430" >General</label>
+<input type="radio" id="a654804fd54a4cab86e5d87581d8c112-ea530dd00f6a4572a3e7b2f3e5be19ea" name="a654804fd54a4cab86e5d87581d8c112" class="tab" ><label for="a654804fd54a4cab86e5d87581d8c112-ea530dd00f6a4572a3e7b2f3e5be19ea" >Startup</label>
+<input type="radio" id="a654804fd54a4cab86e5d87581d8c112-741b9c30563f4dd78443502f070dd3c3" name="a654804fd54a4cab86e5d87581d8c112" class="tab" ><label for="a654804fd54a4cab86e5d87581d8c112-741b9c30563f4dd78443502f070dd3c3" >Android</label>
+<input type="radio" id="a654804fd54a4cab86e5d87581d8c112-9ca1274d4c59459082c674dccec8b0ba" name="a654804fd54a4cab86e5d87581d8c112" class="tab" ><label for="a654804fd54a4cab86e5d87581d8c112-9ca1274d4c59459082c674dccec8b0ba" >iOS</label>
+<input type="radio" id="a654804fd54a4cab86e5d87581d8c112-a5ae82163b7c42c59637a11a3e7ada86" name="a654804fd54a4cab86e5d87581d8c112" class="tab" ><label for="a654804fd54a4cab86e5d87581d8c112-a5ae82163b7c42c59637a11a3e7ada86" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -382,7 +382,7 @@ namespace YourNamespace
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/sensors/barometer.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/sensors/barometer.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
