--- a/sensors/compass.html
+++ b/sensors/compass.html
@@ -86,9 +86,6 @@
                                                             <a href="/setup/startup">Startup</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/boilerplate">Boilerplate</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -251,6 +248,9 @@
                                                             <a href="/other/nfc">NFC</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/other/power">Power Management</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -332,17 +332,17 @@
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v201">v2.0-preview (May 10, 2021)</a>
+                                                            <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="b99a5065d0af4fadaa6f8362216257e4-997e62deec4347e6bf7a4e2a918f1002" name="b99a5065d0af4fadaa6f8362216257e4" class="tab" checked><label for="b99a5065d0af4fadaa6f8362216257e4-997e62deec4347e6bf7a4e2a918f1002" >General</label>
-<input type="radio" id="b99a5065d0af4fadaa6f8362216257e4-6adcfd002507483f91b63c1b38cf8e18" name="b99a5065d0af4fadaa6f8362216257e4" class="tab" ><label for="b99a5065d0af4fadaa6f8362216257e4-6adcfd002507483f91b63c1b38cf8e18" >Startup</label>
-<input type="radio" id="b99a5065d0af4fadaa6f8362216257e4-c81e7755ac624ec4af7b44cb037c3620" name="b99a5065d0af4fadaa6f8362216257e4" class="tab" ><label for="b99a5065d0af4fadaa6f8362216257e4-c81e7755ac624ec4af7b44cb037c3620" >Android</label>
-<input type="radio" id="b99a5065d0af4fadaa6f8362216257e4-d378d0941484407ba4fabeed38e6629f" name="b99a5065d0af4fadaa6f8362216257e4" class="tab" ><label for="b99a5065d0af4fadaa6f8362216257e4-d378d0941484407ba4fabeed38e6629f" >iOS</label>
-<input type="radio" id="b99a5065d0af4fadaa6f8362216257e4-e4e277be33d94be7a5acfda98f4a70bd" name="b99a5065d0af4fadaa6f8362216257e4" class="tab" ><label for="b99a5065d0af4fadaa6f8362216257e4-e4e277be33d94be7a5acfda98f4a70bd" >Windows</label>
+<input type="radio" id="854daf551f654c83bb02d7164febaab9-78f8f2a26e2444cd81559dd12998a58c" name="854daf551f654c83bb02d7164febaab9" class="tab" checked><label for="854daf551f654c83bb02d7164febaab9-78f8f2a26e2444cd81559dd12998a58c" >General</label>
+<input type="radio" id="854daf551f654c83bb02d7164febaab9-573515c612ad465ea86a635b498f6e2f" name="854daf551f654c83bb02d7164febaab9" class="tab" ><label for="854daf551f654c83bb02d7164febaab9-573515c612ad465ea86a635b498f6e2f" >Startup</label>
+<input type="radio" id="854daf551f654c83bb02d7164febaab9-bfe44ed3ebbc47ad99b954cb96f9d37b" name="854daf551f654c83bb02d7164febaab9" class="tab" ><label for="854daf551f654c83bb02d7164febaab9-bfe44ed3ebbc47ad99b954cb96f9d37b" >Android</label>
+<input type="radio" id="854daf551f654c83bb02d7164febaab9-8fff9564cd5a4ec5bc8daa4cd104bd59" name="854daf551f654c83bb02d7164febaab9" class="tab" ><label for="854daf551f654c83bb02d7164febaab9-8fff9564cd5a4ec5bc8daa4cd104bd59" >iOS</label>
+<input type="radio" id="854daf551f654c83bb02d7164febaab9-532103a3e5ff4988ae91620a0708a011" name="854daf551f654c83bb02d7164febaab9" class="tab" ><label for="854daf551f654c83bb02d7164febaab9-532103a3e5ff4988ae91620a0708a011" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -382,7 +382,7 @@ namespace YourNamespace
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/sensors/compass.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/sensors/compass.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
