--- a/sensors/gyroscope.html
+++ b/sensors/gyroscope.html
@@ -86,9 +86,6 @@
                                                             <a href="/setup/startup">Startup</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/boilerplate">Boilerplate</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -251,6 +248,9 @@
                                                             <a href="/other/nfc">NFC</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/other/power">Power Management</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -332,17 +332,17 @@
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v201">v2.0-preview (May 10, 2021)</a>
+                                                            <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="82d37d0ed3e1455cb2bfa34e94556af0-71687202867e40eea1234bce0114c8dc" name="82d37d0ed3e1455cb2bfa34e94556af0" class="tab" checked><label for="82d37d0ed3e1455cb2bfa34e94556af0-71687202867e40eea1234bce0114c8dc" >General</label>
-<input type="radio" id="82d37d0ed3e1455cb2bfa34e94556af0-486436ec06aa477fb06cb2ea8f5efccc" name="82d37d0ed3e1455cb2bfa34e94556af0" class="tab" ><label for="82d37d0ed3e1455cb2bfa34e94556af0-486436ec06aa477fb06cb2ea8f5efccc" >Startup</label>
-<input type="radio" id="82d37d0ed3e1455cb2bfa34e94556af0-77a5e8aa60d64d3c915543d8a50e66dc" name="82d37d0ed3e1455cb2bfa34e94556af0" class="tab" ><label for="82d37d0ed3e1455cb2bfa34e94556af0-77a5e8aa60d64d3c915543d8a50e66dc" >Android</label>
-<input type="radio" id="82d37d0ed3e1455cb2bfa34e94556af0-db1d424784584acf93244cb28b18cd69" name="82d37d0ed3e1455cb2bfa34e94556af0" class="tab" ><label for="82d37d0ed3e1455cb2bfa34e94556af0-db1d424784584acf93244cb28b18cd69" >iOS</label>
-<input type="radio" id="82d37d0ed3e1455cb2bfa34e94556af0-1225013c6dfb47e9951710a7d5c5a9e8" name="82d37d0ed3e1455cb2bfa34e94556af0" class="tab" ><label for="82d37d0ed3e1455cb2bfa34e94556af0-1225013c6dfb47e9951710a7d5c5a9e8" >Windows</label>
+<input type="radio" id="b9db0cdb23db48fd9cb095f42177f6c2-5aedc3200c664782a5c31a6a23a9d718" name="b9db0cdb23db48fd9cb095f42177f6c2" class="tab" checked><label for="b9db0cdb23db48fd9cb095f42177f6c2-5aedc3200c664782a5c31a6a23a9d718" >General</label>
+<input type="radio" id="b9db0cdb23db48fd9cb095f42177f6c2-26348e9c29044af7ac6ea8dd316c5be2" name="b9db0cdb23db48fd9cb095f42177f6c2" class="tab" ><label for="b9db0cdb23db48fd9cb095f42177f6c2-26348e9c29044af7ac6ea8dd316c5be2" >Startup</label>
+<input type="radio" id="b9db0cdb23db48fd9cb095f42177f6c2-8c721809a1d2468ba069692f5b8ce099" name="b9db0cdb23db48fd9cb095f42177f6c2" class="tab" ><label for="b9db0cdb23db48fd9cb095f42177f6c2-8c721809a1d2468ba069692f5b8ce099" >Android</label>
+<input type="radio" id="b9db0cdb23db48fd9cb095f42177f6c2-82824b7e6ac043e18150a8ac9be529df" name="b9db0cdb23db48fd9cb095f42177f6c2" class="tab" ><label for="b9db0cdb23db48fd9cb095f42177f6c2-82824b7e6ac043e18150a8ac9be529df" >iOS</label>
+<input type="radio" id="b9db0cdb23db48fd9cb095f42177f6c2-546fea433ac74748a8ff267613e7fd23" name="b9db0cdb23db48fd9cb095f42177f6c2" class="tab" ><label for="b9db0cdb23db48fd9cb095f42177f6c2-546fea433ac74748a8ff267613e7fd23" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -382,7 +382,7 @@ namespace YourNamespace
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/sensors/gyroscope.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/sensors/gyroscope.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
