--- a/sensors/humidity.html
+++ b/sensors/humidity.html
@@ -86,9 +86,6 @@
                                                             <a href="/setup/startup">Startup</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/boilerplate">Boilerplate</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -251,6 +248,9 @@
                                                             <a href="/other/nfc">NFC</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/other/power">Power Management</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -332,15 +332,15 @@
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v201">v2.0-preview (May 10, 2021)</a>
+                                                            <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="57d7e132a95a4488b7baaee59f21371d-6fd7ab34f82f489a848e0578c1747713" name="57d7e132a95a4488b7baaee59f21371d" class="tab" checked><label for="57d7e132a95a4488b7baaee59f21371d-6fd7ab34f82f489a848e0578c1747713" >General</label>
-<input type="radio" id="57d7e132a95a4488b7baaee59f21371d-43247b469df34d6fb441458bb7fb7c34" name="57d7e132a95a4488b7baaee59f21371d" class="tab" ><label for="57d7e132a95a4488b7baaee59f21371d-43247b469df34d6fb441458bb7fb7c34" >Startup</label>
-<input type="radio" id="57d7e132a95a4488b7baaee59f21371d-d7d6939574e948b4bc85b650bf96c394" name="57d7e132a95a4488b7baaee59f21371d" class="tab" ><label for="57d7e132a95a4488b7baaee59f21371d-d7d6939574e948b4bc85b650bf96c394" >Android</label>
+<input type="radio" id="a15ba49c8cd746efaef71ff37de3d9df-17eeed512073483ea596f7f5d405e81c" name="a15ba49c8cd746efaef71ff37de3d9df" class="tab" checked><label for="a15ba49c8cd746efaef71ff37de3d9df-17eeed512073483ea596f7f5d405e81c" >General</label>
+<input type="radio" id="a15ba49c8cd746efaef71ff37de3d9df-503a360e3eb449e0a822696be233b675" name="a15ba49c8cd746efaef71ff37de3d9df" class="tab" ><label for="a15ba49c8cd746efaef71ff37de3d9df-503a360e3eb449e0a822696be233b675" >Startup</label>
+<input type="radio" id="a15ba49c8cd746efaef71ff37de3d9df-3780ba290fc1497fa63a4bb727815241" name="a15ba49c8cd746efaef71ff37de3d9df" class="tab" ><label for="a15ba49c8cd746efaef71ff37de3d9df-3780ba290fc1497fa63a4bb727815241" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -374,7 +374,7 @@ namespace YourNamespace
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/sensors/humidity.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/sensors/humidity.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
