--- a/sensors/pedometer.html
+++ b/sensors/pedometer.html
@@ -86,9 +86,6 @@
                                                             <a href="/setup/startup">Startup</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/boilerplate">Boilerplate</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -251,6 +248,9 @@
                                                             <a href="/other/nfc">NFC</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/other/power">Power Management</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -332,17 +332,17 @@
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v201">v2.0-preview (May 10, 2021)</a>
+                                                            <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="2eba8cfc7cf142a0b64d8b1b5ff875fc-52c5ce64d22e40cca3a71fb311747158" name="2eba8cfc7cf142a0b64d8b1b5ff875fc" class="tab" checked><label for="2eba8cfc7cf142a0b64d8b1b5ff875fc-52c5ce64d22e40cca3a71fb311747158" >General</label>
-<input type="radio" id="2eba8cfc7cf142a0b64d8b1b5ff875fc-cfec4337e92146cda9d67b97529913cb" name="2eba8cfc7cf142a0b64d8b1b5ff875fc" class="tab" ><label for="2eba8cfc7cf142a0b64d8b1b5ff875fc-cfec4337e92146cda9d67b97529913cb" >Startup</label>
-<input type="radio" id="2eba8cfc7cf142a0b64d8b1b5ff875fc-a83a9372247b48aca723c8e107c0624f" name="2eba8cfc7cf142a0b64d8b1b5ff875fc" class="tab" ><label for="2eba8cfc7cf142a0b64d8b1b5ff875fc-a83a9372247b48aca723c8e107c0624f" >Android</label>
-<input type="radio" id="2eba8cfc7cf142a0b64d8b1b5ff875fc-5a9fa0a0ab494df1b97a7cb400702fd6" name="2eba8cfc7cf142a0b64d8b1b5ff875fc" class="tab" ><label for="2eba8cfc7cf142a0b64d8b1b5ff875fc-5a9fa0a0ab494df1b97a7cb400702fd6" >iOS</label>
-<input type="radio" id="2eba8cfc7cf142a0b64d8b1b5ff875fc-4bca843b917a4e5bab2b95361e6ed22f" name="2eba8cfc7cf142a0b64d8b1b5ff875fc" class="tab" ><label for="2eba8cfc7cf142a0b64d8b1b5ff875fc-4bca843b917a4e5bab2b95361e6ed22f" >Windows</label>
+<input type="radio" id="69401737e7b14d049dd496fc9408ee02-b0d95c4eaaf54c558a96d64bd538dd29" name="69401737e7b14d049dd496fc9408ee02" class="tab" checked><label for="69401737e7b14d049dd496fc9408ee02-b0d95c4eaaf54c558a96d64bd538dd29" >General</label>
+<input type="radio" id="69401737e7b14d049dd496fc9408ee02-763646606ce7405aa825679fa3aa5397" name="69401737e7b14d049dd496fc9408ee02" class="tab" ><label for="69401737e7b14d049dd496fc9408ee02-763646606ce7405aa825679fa3aa5397" >Startup</label>
+<input type="radio" id="69401737e7b14d049dd496fc9408ee02-b666968b7de744a8bc2a0e38bf02fca1" name="69401737e7b14d049dd496fc9408ee02" class="tab" ><label for="69401737e7b14d049dd496fc9408ee02-b666968b7de744a8bc2a0e38bf02fca1" >Android</label>
+<input type="radio" id="69401737e7b14d049dd496fc9408ee02-07f5ed3ade844292a194696e9ddb2f05" name="69401737e7b14d049dd496fc9408ee02" class="tab" ><label for="69401737e7b14d049dd496fc9408ee02-07f5ed3ade844292a194696e9ddb2f05" >iOS</label>
+<input type="radio" id="69401737e7b14d049dd496fc9408ee02-aed2ac114c1d482e9217fa25d9ab2277" name="69401737e7b14d049dd496fc9408ee02" class="tab" ><label for="69401737e7b14d049dd496fc9408ee02-aed2ac114c1d482e9217fa25d9ab2277" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -399,7 +399,7 @@ namespace YourNamespace
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/sensors/pedometer.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/sensors/pedometer.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
