--- a/sensors/proximity.html
+++ b/sensors/proximity.html
@@ -86,9 +86,6 @@
                                                             <a href="/setup/startup">Startup</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/boilerplate">Boilerplate</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -251,6 +248,9 @@
                                                             <a href="/other/nfc">NFC</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/other/power">Power Management</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -332,16 +332,16 @@
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v201">v2.0-preview (May 10, 2021)</a>
+                                                            <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="f9c3dbed037349e5943aacbd8d7ca185-5477956d88744e2fb4eb81c90af374cb" name="f9c3dbed037349e5943aacbd8d7ca185" class="tab" checked><label for="f9c3dbed037349e5943aacbd8d7ca185-5477956d88744e2fb4eb81c90af374cb" >General</label>
-<input type="radio" id="f9c3dbed037349e5943aacbd8d7ca185-48b39437b8b24477810c61fd31a2562a" name="f9c3dbed037349e5943aacbd8d7ca185" class="tab" ><label for="f9c3dbed037349e5943aacbd8d7ca185-48b39437b8b24477810c61fd31a2562a" >Startup</label>
-<input type="radio" id="f9c3dbed037349e5943aacbd8d7ca185-14d9cab9d3fc42f5b7d2fa195e61249b" name="f9c3dbed037349e5943aacbd8d7ca185" class="tab" ><label for="f9c3dbed037349e5943aacbd8d7ca185-14d9cab9d3fc42f5b7d2fa195e61249b" >Android</label>
-<input type="radio" id="f9c3dbed037349e5943aacbd8d7ca185-49b2cff0b61a41528d1bd57c77d02f29" name="f9c3dbed037349e5943aacbd8d7ca185" class="tab" ><label for="f9c3dbed037349e5943aacbd8d7ca185-49b2cff0b61a41528d1bd57c77d02f29" >iOS</label>
+<input type="radio" id="2858675b49674abd87f35811a161b94d-c0363a1999c749eaa4e767af10622ac1" name="2858675b49674abd87f35811a161b94d" class="tab" checked><label for="2858675b49674abd87f35811a161b94d-c0363a1999c749eaa4e767af10622ac1" >General</label>
+<input type="radio" id="2858675b49674abd87f35811a161b94d-f517e1641ff44591b02aa0216801dbf5" name="2858675b49674abd87f35811a161b94d" class="tab" ><label for="2858675b49674abd87f35811a161b94d-f517e1641ff44591b02aa0216801dbf5" >Startup</label>
+<input type="radio" id="2858675b49674abd87f35811a161b94d-48f95f9c47514287ba2f0c414f5c3d9d" name="2858675b49674abd87f35811a161b94d" class="tab" ><label for="2858675b49674abd87f35811a161b94d-48f95f9c47514287ba2f0c414f5c3d9d" >Android</label>
+<input type="radio" id="2858675b49674abd87f35811a161b94d-5dcde3cedf494cab9cec6c6d1c51246d" name="2858675b49674abd87f35811a161b94d" class="tab" ><label for="2858675b49674abd87f35811a161b94d-5dcde3cedf494cab9cec6c6d1c51246d" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -378,7 +378,7 @@ namespace YourNamespace
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/sensors/proximity.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/sensors/proximity.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
