--- a/beacons/ranging.html
+++ b/beacons/ranging.html
@@ -86,9 +86,6 @@
                                                             <a href="/setup/startup">Startup</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/boilerplate">Boilerplate</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -251,6 +248,9 @@
                                                             <a href="/other/nfc">NFC</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/other/power">Power Management</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -332,17 +332,17 @@
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v201">v2.0-preview (May 10, 2021)</a>
+                                                            <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Ranging is a foreground only operation.  You can scan for &quot;all&quot; beacons with a particular filter set.  Meaning if you only filter by UUID, all beacons under that UUID will be returned.  With ranging, all of the identifier values are provided.  You are</p>
 <div class="tab-wrap">
-<input type="radio" id="e6ae4760530f4a05a37c88f3b9b81a83-f1f04249136249ffa76e1d94b5c2f5a9" name="e6ae4760530f4a05a37c88f3b9b81a83" class="tab" checked><label for="e6ae4760530f4a05a37c88f3b9b81a83-f1f04249136249ffa76e1d94b5c2f5a9" >General</label>
-<input type="radio" id="e6ae4760530f4a05a37c88f3b9b81a83-eec20ddebe2041a4af768c373c45edbb" name="e6ae4760530f4a05a37c88f3b9b81a83" class="tab" ><label for="e6ae4760530f4a05a37c88f3b9b81a83-eec20ddebe2041a4af768c373c45edbb" >Startup</label>
-<input type="radio" id="e6ae4760530f4a05a37c88f3b9b81a83-f685189483db459ca11d287c0e9d33d4" name="e6ae4760530f4a05a37c88f3b9b81a83" class="tab" ><label for="e6ae4760530f4a05a37c88f3b9b81a83-f685189483db459ca11d287c0e9d33d4" >Android</label>
-<input type="radio" id="e6ae4760530f4a05a37c88f3b9b81a83-d4fe4f34a3fe40eca1e5398a2b5b045b" name="e6ae4760530f4a05a37c88f3b9b81a83" class="tab" ><label for="e6ae4760530f4a05a37c88f3b9b81a83-d4fe4f34a3fe40eca1e5398a2b5b045b" >iOS</label>
+<input type="radio" id="e29984b3b5f641789762712f278734a3-6c6265db635e4c8897bf794f54344b64" name="e29984b3b5f641789762712f278734a3" class="tab" checked><label for="e29984b3b5f641789762712f278734a3-6c6265db635e4c8897bf794f54344b64" >General</label>
+<input type="radio" id="e29984b3b5f641789762712f278734a3-b122fdc42328441ca8322caba09a9872" name="e29984b3b5f641789762712f278734a3" class="tab" ><label for="e29984b3b5f641789762712f278734a3-b122fdc42328441ca8322caba09a9872" >Startup</label>
+<input type="radio" id="e29984b3b5f641789762712f278734a3-ff1786fadec84529999a77e2bacea803" name="e29984b3b5f641789762712f278734a3" class="tab" ><label for="e29984b3b5f641789762712f278734a3-ff1786fadec84529999a77e2bacea803" >Android</label>
+<input type="radio" id="e29984b3b5f641789762712f278734a3-0fb0553e06b743e0a769307f494b0df7" name="e29984b3b5f641789762712f278734a3" class="tab" ><label for="e29984b3b5f641789762712f278734a3-0fb0553e06b743e0a769307f494b0df7" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -441,7 +441,7 @@ public class BeaconRanging
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/beacons/ranging.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/beacons/ranging.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
