--- a/other/platform.html
+++ b/other/platform.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
-    <title>Shiny.NET - v2.0-preview (May 10, 2021)</title>
+    <title>Shiny.NET - Platform</title>
     <link href="/scss/TabGroup.css" rel="stylesheet" type="text/css">
 </head>
 <body class="d-flex flex-column">
@@ -53,7 +53,7 @@
                         <div class="row">
                             <div class="offset-md-3 offset-lg-2 px-3 px-md-0">
                                 <div class="section text-uppercase">Shiny.NET</div>
-                                <div class="text-white m-0 title">v2.0-preview (May 10, 2021)</div>
+                                <div class="text-white m-0 title">Platform</div>
                             </div>
                         </div>
                     </div>
@@ -84,9 +84,6 @@
                                                 <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/setup/startup">Startup</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/setup/boilerplate">Boilerplate</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
@@ -237,7 +234,7 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/other">Other</a>                                            </div>
-                                                <div class="sidebar-nav-children">
+                                                <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/other/connectivity">Connectivity</a>
                                                         </div>
@@ -249,6 +246,9 @@
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/other/nfc">NFC</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child active">
+                                                            <a href="/other/platform">Platform</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/other/power">Power Management</a>
@@ -327,51 +327,28 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/release-notes">Release Notes</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
+                                                <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
-                                                        <div class="sidebar-nav-child active">
-                                                            <a href="/release-notes/v201">v2.0-preview (May 10, 2021)</a>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <h2 id="core">Core</h2>
+                                    <p>Service: Shiny.IPlatform</p>
+<p>The platform in many ways, is the true core of Shiny.  It has all of the methods for:</p>
 <ul>
-<li>[Feature] RX helper - SelectAsync</li>
-</ul>
-<h2 id="code-generator">Code Generator</h2>
-<ul>
-<li>[Fix][iOS] MSAL wireup had a bad reference</li>
-<li>[Fix] Improve root namespace detection to deal with weird project/assembly names</li>
-</ul>
-<h2 id="bluetoothle">BluetoothLE</h2>
-<ul>
-<li>[Fix] Managed Peripheral was not respecting notify vs indicate when restoring subscriptions</li>
-<li>[Fix][Android] BLE Delegate OnConnected <a href="https://github.com/shinyorg/shiny/pull/579">PR</a></li>
-<li>[Android] Improved synchronization mechanism</li>
-</ul>
-<h2 id="beacons">Beacons</h2>
-<ul>
-<li>[Fix] UseBeaconMonitoring in startup was returning false (unsupported) even though it had successfully been registered</li>
-</ul>
-<h2 id="notifications">Notifications</h2>
-<ul>
-<li>Repository extensions were internalized as they were meant to be used outside of the library</li>
-</ul>
-<h2 id="speech-recognition">Speech Recognition</h2>
-<ul>
-<li>[Feature] Ability to pass cultureinfo to listening functions <a href="https://github.com/shinyorg/shiny/issues/569">#569</a></li>
-</ul>
-<h2 id="nfc">NFC</h2>
-<ul>
-<li>[Android][Fix] Uses wrong NFC manifest feature <a href="https://github.com/shinyorg/shiny/issues/585">#585</a></li>
+<li>Getting the base application directories</li>
+<li>Requesting permissions</li>
+<li>Providing the lifecycle hooks to your services as well as the Shiny modules.</li>
+<li>Provides access to things like your App Version, OS Version, etc</li>
 </ul>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/release-notes/v201.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/other/platform.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
