--- a/push/firebase.html
+++ b/push/firebase.html
@@ -84,9 +84,6 @@
                                                             <a href="/setup/startup">Startup</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/boilerplate">Boilerplate</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -249,6 +246,9 @@
                                                             <a href="/other/nfc">NFC</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/other/power">Power Management</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -330,16 +330,16 @@
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v201">v2.0-preview (May 10, 2021)</a>
+                                                            <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="aec29995a4af4a449cd48310e24eb723-84ca7b1b76b749e397caf05768e45ecc" name="aec29995a4af4a449cd48310e24eb723" class="tab" checked=""><label for="aec29995a4af4a449cd48310e24eb723-84ca7b1b76b749e397caf05768e45ecc">General</label>
-<input type="radio" id="aec29995a4af4a449cd48310e24eb723-77bbf6b641fc4e3aacb4e007fcfe9855" name="aec29995a4af4a449cd48310e24eb723" class="tab"><label for="aec29995a4af4a449cd48310e24eb723-77bbf6b641fc4e3aacb4e007fcfe9855">Startup</label>
-<input type="radio" id="aec29995a4af4a449cd48310e24eb723-a293a02ccb3a49c4ad6d83d475e18cff" name="aec29995a4af4a449cd48310e24eb723" class="tab"><label for="aec29995a4af4a449cd48310e24eb723-a293a02ccb3a49c4ad6d83d475e18cff">Android</label>
-<input type="radio" id="aec29995a4af4a449cd48310e24eb723-7f958b8244db4270bf3f1ea95da3b0a5" name="aec29995a4af4a449cd48310e24eb723" class="tab"><label for="aec29995a4af4a449cd48310e24eb723-7f958b8244db4270bf3f1ea95da3b0a5">iOS</label>
+<input type="radio" id="e132e4f26b6a4cc19f52e7d7e0e3bb64-0165c68e93f844209f779b2626623388" name="e132e4f26b6a4cc19f52e7d7e0e3bb64" class="tab" checked=""><label for="e132e4f26b6a4cc19f52e7d7e0e3bb64-0165c68e93f844209f779b2626623388">General</label>
+<input type="radio" id="e132e4f26b6a4cc19f52e7d7e0e3bb64-867d43260abb474b8a8ec64082f523ff" name="e132e4f26b6a4cc19f52e7d7e0e3bb64" class="tab"><label for="e132e4f26b6a4cc19f52e7d7e0e3bb64-867d43260abb474b8a8ec64082f523ff">Startup</label>
+<input type="radio" id="e132e4f26b6a4cc19f52e7d7e0e3bb64-4ed21cd7a71f419d881e0d2a3dec5d0e" name="e132e4f26b6a4cc19f52e7d7e0e3bb64" class="tab"><label for="e132e4f26b6a4cc19f52e7d7e0e3bb64-4ed21cd7a71f419d881e0d2a3dec5d0e">Android</label>
+<input type="radio" id="e132e4f26b6a4cc19f52e7d7e0e3bb64-9c6ff3b633c4421db316b0a490091696" name="e132e4f26b6a4cc19f52e7d7e0e3bb64" class="tab"><label for="e132e4f26b6a4cc19f52e7d7e0e3bb64-9c6ff3b633c4421db316b0a490091696">iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -429,7 +429,7 @@ and mark it as a "BundleResource"</p>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/push/firebase.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/push/firebase.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
