--- a/release-notes/v210.html
+++ b/release-notes/v210.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
-    <title>Shiny.NET - Boilerplate</title>
+    <title>Shiny.NET - v2.1.0 (June 10, 2021)</title>
     <link href="/scss/TabGroup.css" rel="stylesheet" type="text/css">
 </head>
 <body class="d-flex flex-column">
@@ -53,7 +53,7 @@
                         <div class="row">
                             <div class="offset-md-3 offset-lg-2 px-3 px-md-0">
                                 <div class="section text-uppercase">Shiny.NET</div>
-                                <div class="text-white m-0 title">Boilerplate</div>
+                                <div class="text-white m-0 title">v2.1.0 (June 10, 2021)</div>
                             </div>
                         </div>
                     </div>
@@ -81,12 +81,9 @@
 <a href="/quickstart">Quick Start</a>                                            </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/setup">Setup</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
+                                                <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/setup/startup">Startup</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child active">
-                                                            <a href="/setup/boilerplate">Boilerplate</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
@@ -251,6 +248,9 @@
                                                             <a href="/other/nfc">NFC</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/other/power">Power Management</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -327,64 +327,74 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/release-notes">Release Notes</a>                                            </div>
-                                                <div class="sidebar-nav-children">
+                                                <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v201">v2.0-preview (May 10, 2021)</a>
+                                                        <div class="sidebar-nav-child active">
+                                                            <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <p>Don't like the platform boilerplate?  This is easy to avoid with Shiny as of version 2.</p>
-<p>First install the following nuget into your head projects!</p>
-<a href="https://www.nuget.org/packages/Shiny/" target="Shiny"><img src="https://img.shields.io/nuget/v/Shiny.svg?style=for-the-badge" /></a>
-<p>Second, add the following assembly attribute in your head projects:</p>
-<pre><code class="language-csharp">[assembly: Shiny.ShinyApplication(
-    ShinyStartupTypename = &quot;&quot;
-    XamarinAppName = &quot;YourNamespace.YourXamarinFormsApp&quot;
-    ExcludeJobs = false,
-    ExcludeStartupTasks = false,
-    ExcludeModules = false,
-    ExcludeThirdParty = false,
-    ExcludeServices = false
-)]
-</code></pre>
-<p>This will auto-generate several things for you</p>
-<ol>
-<li>All of the necessary Shiny hooks</li>
-<li>Call Init on many 3rd party</li>
-<li>Auto-generate a Shiny startup file (if not given a custom startup class name)
-<ol type="a">
-<li>all jobs will be auto-registered</li>
-<li>any custom services will be auto-registered</li>
-<li>all delegates will be registered with their corresponding library (ie. services.UseGps<MyGpsDelegate>() )</li>
-</ol>
-</li>
-<li>Xamarin Forms app can be hooked and Init called for you automatically</li>
-<li>Any classes marked with [Shiny.ShinyServiceAttribute] will be added and available to the container under all interfaces it implements</li>
-</ol>
-<h2 id="shiny-also-auto-adds-popular-3rd-party-initialization-for">Shiny also auto-adds popular 3rd party initialization for</h2>
+                                    <h2 id="core">Core</h2>
 <ul>
-<li><a href="https://github.com/xamarin/xamarin.forms">Xamarin Forms</a></li>
-<li><a href="https://github.com/xamarin/essentials">Xamarin Essentials</a></li>
-<li><a href="https://github.com/aritchie/userdialogs">ACR User Dialogs</a></li>
-<li><a href="https://github.com/muak/AiForms.SettingsView">AIForms Settings View</a></li>
-<li><a href="https://github.com/Baseflow/XF-Material-Library">XF Material</a></li>
-<li><a href="https://github.com/rotorgames/Rg.Plugins.Popup">RG Popups</a></li>
-<li><a href="https://github.com/AzureAD/microsoft-authentication-library-for-dotnet">Microsoft Identity Client (MSAL)</a></li>
+<li>[BREAKING][UWP] UWP has new boilerplate requirements</li>
+<li>[Fix][UWP] Application Data Settings issue with duplicate keys</li>
+<li>[Enhancement] RX helper - SelectAsync</li>
+<li>[Enhancement][Android] Improved permission requests</li>
+<li>[Enhancement] Under the hood improvements to state restoration and startup tasks</li>
+<li>[Enhancement] IPlatform now includes InvokeOnMainThread x-plat calls</li>
 </ul>
-<h2 id="special-considerations">Special Considerations</h2>
-<ol>
-<li>All of your Android activities must be marked as a &quot;partial class&quot;</li>
-<li>If you have an existing Android application class, you will have to add the Shiny hook yourself.  Please look at the <a href="android">Getting Started with Android</a></li>
-<li>Some Shiny plugins require extra configuration that cannot be generated for the Shiny startup file such as &quot;Shiny.Push&quot;.  Build errors will be given when this happens.  In this case, please follow the instructions for that particular library</li>
-</ol>
+<h2 id="code-generator">Code Generator</h2>
+<ul>
+<li>[Fix][iOS] MSAL wireup had a bad reference</li>
+<li>[Fix][Android] Generated activity code for RG popups call was wrong <a href="https://github.com/shinyorg/shiny/issues/591">591</a></li>
+<li>[Fix] Improve root namespace detection to deal with weird project/assembly names</li>
+</ul>
+<h2 id="bluetoothle">BluetoothLE</h2>
+<ul>
+<li>[Fix] Managed Peripheral was not respecting notify vs indicate when restoring subscriptions</li>
+<li>[Fix] Managed Scan will filter dead buffers (no scan results)</li>
+<li>[Fix] Managed Scan now has configurable buffer time - IManagedScan.BufferTimeSpan</li>
+<li>[Fix][Android] BLE Delegate OnConnected <a href="https://github.com/shinyorg/shiny/pull/579">PR</a></li>
+<li>[Fix][UWP] BLE Scans would return null results</li>
+<li>[Fix][Android] Many flavours of Droid won't fire Connecting/Disconnecting.  Shiny now covers the Connecting portion of this.</li>
+<li>[Fix][Android] Push adapter status events to both delegate and observable</li>
+<li>[Enhancement][Android][UWP] Support for 16bit UUID strings</li>
+<li>[Enhancement][Android] Improved synchronization mechanism</li>
+</ul>
+<h2 id="ble-hosting">BLE Hosting</h2>
+<ul>
+<li>[Enhancement][Android][UWP] Support for 16bit UUID strings</li>
+</ul>
+<h2 id="beacons">Beacons</h2>
+<ul>
+<li>[Fix] UseBeaconMonitoring in startup was returning false (unsupported) even though it had successfully been registered</li>
+<li>[Fix] Improved argument checks on beacon region</li>
+</ul>
+<h2 id="notifications">Notifications</h2>
+<ul>
+<li>[Feature][Android] App Icon badge numbers are now supported thanks to <a href="https://github.com/wcoder/ShortcutBadger">Xamarin.ShortcutBadger</a></li>
+<li>Repository extensions were internalized as they were meant to be used outside of the library</li>
+<li>[Fix][Android] Foreground services wouldn't log issues with the notification if something was setup wrong</li>
+</ul>
+<h2 id="push-azure-notification-hubs">Push - Azure Notification Hubs</h2>
+<ul>
+<li>[Fix][iOS] Device token could be invalid</li>
+</ul>
+<h2 id="speech-recognition">Speech Recognition</h2>
+<ul>
+<li>[Feature] Ability to pass cultureinfo to listening functions <a href="https://github.com/shinyorg/shiny/issues/569">#569</a></li>
+</ul>
+<h2 id="nfc">NFC</h2>
+<ul>
+<li>[Android][Fix] Uses wrong NFC manifest feature <a href="https://github.com/shinyorg/shiny/issues/585">#585</a></li>
+</ul>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/setup/boilerplate.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/release-notes/v210.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
