--- a/sensors/magnetometer.html
+++ b/sensors/magnetometer.html
@@ -86,9 +86,6 @@
                                                             <a href="/setup/startup">Startup</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/boilerplate">Boilerplate</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -251,6 +248,9 @@
                                                             <a href="/other/nfc">NFC</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/other/power">Power Management</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -332,17 +332,17 @@
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v201">v2.0-preview (May 10, 2021)</a>
+                                                            <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="68546038b0114c27a289f925ee0a2755-bc628cc665624cc8a2ce8fd9135dea90" name="68546038b0114c27a289f925ee0a2755" class="tab" checked><label for="68546038b0114c27a289f925ee0a2755-bc628cc665624cc8a2ce8fd9135dea90" >General</label>
-<input type="radio" id="68546038b0114c27a289f925ee0a2755-d68de2398e39474a8748f7a5da4c7665" name="68546038b0114c27a289f925ee0a2755" class="tab" ><label for="68546038b0114c27a289f925ee0a2755-d68de2398e39474a8748f7a5da4c7665" >Startup</label>
-<input type="radio" id="68546038b0114c27a289f925ee0a2755-2102b51b71184495a0bcf89912adae5f" name="68546038b0114c27a289f925ee0a2755" class="tab" ><label for="68546038b0114c27a289f925ee0a2755-2102b51b71184495a0bcf89912adae5f" >Android</label>
-<input type="radio" id="68546038b0114c27a289f925ee0a2755-5ebb09766eba4635a2df4c3f5dbabb63" name="68546038b0114c27a289f925ee0a2755" class="tab" ><label for="68546038b0114c27a289f925ee0a2755-5ebb09766eba4635a2df4c3f5dbabb63" >iOS</label>
-<input type="radio" id="68546038b0114c27a289f925ee0a2755-f3ff34b0739d482686480cd440c85554" name="68546038b0114c27a289f925ee0a2755" class="tab" ><label for="68546038b0114c27a289f925ee0a2755-f3ff34b0739d482686480cd440c85554" >Windows</label>
+<input type="radio" id="29f8dc452ae64665934247e43fad4bad-6ea29f2282a34c36baa520c57294d529" name="29f8dc452ae64665934247e43fad4bad" class="tab" checked><label for="29f8dc452ae64665934247e43fad4bad-6ea29f2282a34c36baa520c57294d529" >General</label>
+<input type="radio" id="29f8dc452ae64665934247e43fad4bad-0fe660421b404dc3b5ee96917e54493e" name="29f8dc452ae64665934247e43fad4bad" class="tab" ><label for="29f8dc452ae64665934247e43fad4bad-0fe660421b404dc3b5ee96917e54493e" >Startup</label>
+<input type="radio" id="29f8dc452ae64665934247e43fad4bad-add9b02c4cb449369c9f87583a80cc28" name="29f8dc452ae64665934247e43fad4bad" class="tab" ><label for="29f8dc452ae64665934247e43fad4bad-add9b02c4cb449369c9f87583a80cc28" >Android</label>
+<input type="radio" id="29f8dc452ae64665934247e43fad4bad-1cb3aae9a76f4f989cbf08546ccd30c2" name="29f8dc452ae64665934247e43fad4bad" class="tab" ><label for="29f8dc452ae64665934247e43fad4bad-1cb3aae9a76f4f989cbf08546ccd30c2" >iOS</label>
+<input type="radio" id="29f8dc452ae64665934247e43fad4bad-7832fe96346f48d5a6931e456b11731f" name="29f8dc452ae64665934247e43fad4bad" class="tab" ><label for="29f8dc452ae64665934247e43fad4bad-7832fe96346f48d5a6931e456b11731f" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -382,7 +382,7 @@ namespace YourNamespace
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/sensors/magnetometer.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/sensors/magnetometer.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
