--- a/sensors/temperature.html
+++ b/sensors/temperature.html
@@ -86,9 +86,6 @@
                                                             <a href="/setup/startup">Startup</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/boilerplate">Boilerplate</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/ios">Platform - iOS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -251,6 +248,9 @@
                                                             <a href="/other/nfc">NFC</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
+                                                            <a href="/other/platform">Platform</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/other/power">Power Management</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -332,15 +332,15 @@
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v201">v2.0-preview (May 10, 2021)</a>
+                                                            <a href="/release-notes/v210">v2.1.0 (June 10, 2021)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="bc382ca1a5ab41b79e152db12c318ea6-6f06f4dfbd014adc8718a45cf50bf1a1" name="bc382ca1a5ab41b79e152db12c318ea6" class="tab" checked><label for="bc382ca1a5ab41b79e152db12c318ea6-6f06f4dfbd014adc8718a45cf50bf1a1" >General</label>
-<input type="radio" id="bc382ca1a5ab41b79e152db12c318ea6-6f0eaa8a12a547e49eb931ba4c69a7f0" name="bc382ca1a5ab41b79e152db12c318ea6" class="tab" ><label for="bc382ca1a5ab41b79e152db12c318ea6-6f0eaa8a12a547e49eb931ba4c69a7f0" >Startup</label>
-<input type="radio" id="bc382ca1a5ab41b79e152db12c318ea6-822ba224aeb143839f999def950b6ea3" name="bc382ca1a5ab41b79e152db12c318ea6" class="tab" ><label for="bc382ca1a5ab41b79e152db12c318ea6-822ba224aeb143839f999def950b6ea3" >Android</label>
+<input type="radio" id="dac803f1a0d248ba81d71e4057349bee-3895da4a309a4cbd8d8395f8eb2cf137" name="dac803f1a0d248ba81d71e4057349bee" class="tab" checked><label for="dac803f1a0d248ba81d71e4057349bee-3895da4a309a4cbd8d8395f8eb2cf137" >General</label>
+<input type="radio" id="dac803f1a0d248ba81d71e4057349bee-882a4dc10f994cd89039acfde0c75065" name="dac803f1a0d248ba81d71e4057349bee" class="tab" ><label for="dac803f1a0d248ba81d71e4057349bee-882a4dc10f994cd89039acfde0c75065" >Startup</label>
+<input type="radio" id="dac803f1a0d248ba81d71e4057349bee-03bd29c700d04007b4da9856f3e85c8b" name="dac803f1a0d248ba81d71e4057349bee" class="tab" ><label for="dac803f1a0d248ba81d71e4057349bee-03bd29c700d04007b4da9856f3e85c8b" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -374,7 +374,7 @@ namespace YourNamespace
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/input/sensors/temperature.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/sensors/temperature.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
